--- a/MVCDemo/Web.config
+++ b/MVCDemo/Web.config
@@ -15,7 +15,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVCDemo-20190429074927.mdf;Initial Catalog=aspnet-MVCDemo-20190429074927;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MVCDemoV2.mdf;Initial Catalog=aspnet-MVCDemoV2;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-MVCDemo-20190429201201;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MVCDemo-20190429201201.mdf" />-->
   </connectionStrings>
   <appSettings>
